DistanceElement changes